# mango-fork

./: mangowm.scm  meson.build
docs/bindings/: keys.md
docs/patches/v0.15.0/configuration/: monitors.md
docs/visuals/: status-bar.md
docs/window-management/: rules.md
src/: mango.c
src/action/: client.h  monitor.h
src/animation/: client.h  layer.h
src/config/: parse_config.h
src/dispatch/: bind_declare.h  bind_define.h
src/ext-protocol/: ext-workspace.h  foreign-toplevel.h  hdr.h  tablet.h  tearing.h
src/fetch/: client.h  common.h
src/ipc/: ipc.h
src/layout/: arrange.h
